--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "express-fileupload": "^1.5.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "validator": "^13.15.15"
   },
   "keywords": [],
   "author": "",
